--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
           <h1 class="page-header">管理控制台</h1>
             
           <div class="col-md-12 col-xs-12 col-sm-12">
-            <button type="button" class="btn btn-default">操作一</button>
-            <button type="button" class="btn btn-primary">操作二</button>
-            <button type="button" class="btn btn-success">操作三</button>
-            <button type="button" class="btn btn-info">操作四</button>
-            <button type="button" class="btn btn-warning">操作五</button>
-            <button type="button" class="btn btn-danger">操作六</button>
+            <button type="button" class="btn btn-default">操作1</button>
+            <button type="button" class="btn btn-primary">操作2</button>
+            <button type="button" class="btn btn-success">操作3</button>
+            <button type="button" class="btn btn-info">操作4</button>
+            <button type="button" class="btn btn-warning">操作5</button>
+            <button type="button" class="btn btn-danger">操作6</button>
           </div>
           <br>
           <br>
@@ -228,7 +228,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/docs.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
